--- a/source/_layouts/wrapper.html
+++ b/source/_layouts/wrapper.html
@@ -7,7 +7,8 @@
   {% for href in page.stylesheet-hrefs%}
     <link rel="stylesheet" href={{ href }}><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" /></head>
   {% endfor %}
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald|Raleway" rel="stylesheet">
+  <title>Testing Ground</title>
   <link rel="icon" type="image/svg+xml" href="/media/favicon.svg">
   <link rel="icon" type="image/png" href="/media/favicon.png">
 </head>
