Get rid of the localhost:4000/feed.xml thing

--- a/source/_layouts/wrapper.html
+++ b/source/_layouts/wrapper.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% for href in page.stylesheet-hrefs%}
-    <link rel="stylesheet" href={{ href }}><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" /></head>
+    <link rel="stylesheet" href={{ href }}>
   {% endfor %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald|Raleway" rel="stylesheet">
   <title>Testing Ground</title>
