--- a/styles/pages/carousel.scss
+++ b/styles/pages/carousel.scss
@@ -1,101 +1,7 @@
 @import '../partials/page';
+@import '../partials/photo-carousel';
 
-.card-carousel {
+.c-photo-display-wrapper {
   width: 50%;
   margin: 0 auto;
-}
-
-.card-img {
-  overflow: hidden;
-  width: 100%;
-  position: relative;
-  padding: 40% 0;
-  box-sizing: border-box;
-}
-
-.u-absolute-fill {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.slideable-frame {
-  width: 400%; //
-  transform: translate3d(0, 0, 0); //
-  transition: transform 1s;
-  height: 100%;
-}
-
-.image-holder {
-  width: 25%; //
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-  // padding: 2.5rem;
-  box-sizing: border-box;
-
-  img {
-    width: 100%;
-    // height: auto;
-    height: 100%;
-    object-fit: contain;
-    // filter: drop-shadow(0px 0px 0.5rem hsla(0, 0%, 0%, 1.0));
-  }
-}
-
-.count-indicator {
-  font-size: 2rem;
-  height: 2rem;
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 2rem;
-  width: 100%;
-  text-align: center;
-  color: #eee;
-}
-
-.count-indicator__bullet {
-  display: inline-block;
-  width: 2rem;
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-}
-
-.actions {
-  font-size: 2rem;
-  height: 40px;
-  position: absolute;
-  top: 50%;
-  margin-top: -20px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #585858;
-}
-
-.actions > span {
-  cursor: pointer;
-  transition: all 250ms;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  border-radius: 50%;
-  color: hsla(0, 0%, 0%, 0);
-  background-color: hsla(0, 0%, 0%, 0);
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-
-.card-carousel:hover .actions > span {
-  background-color: hsla(0, 0%, 0%, 0.6);
-  color: #585858;
-
-  &:hover {
-    color: #eee;
-  }
 }
