--- a/styles/partials/_photo-carousel.scss
+++ b/styles/partials/_photo-carousel.scss
@@ -1,10 +1,13 @@
+// most useful tuning knobs
 $container-padding: 0.5rem;
-$frame-height-aspect: 80%;
-$changer-margin: $container-padding*2;
+$frame-height-aspect-ratio: 80%;
+$changer-margin: $container-padding * 2;
 $changer-size: 2.5rem;
 $changer-color-background: hsla(0, 0%, 100%, 0.5);
 $changer-color-icon: hsla(0, 0%, 40%, 1.0);
 $changer-color-icon-hover: $color-black;
+$image-shadow-color: hsla(0, 0%, 40%, 0.4);
+$image-shadow-spread: 0.2rem;
 
 .c-carousel {
   // utility classes kept inside carousel
@@ -48,7 +51,7 @@ $changer-color-icon-hover: $color-black;
   width: 100%;
   height: 100%;
   object-fit: contain;
-  filter: drop-shadow(0px 0px 0.5rem hsla(0, 0%, 0%, 1.0));
+  filter: drop-shadow(0px 0px $image-shadow-spread $image-shadow-color);
 }
 
 .c-carousel__count-indicator {
